# heat-pump-monitor

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
module/: __init__.py  classes.py  core.py  globalset.py  parser.py
notebooks/: 00-features.ipynb  01-notebook.ipynb
outcomes/: last_90_days.json  merged_stats_meta.csv  metadata.json
workflows/: example.py  tester.py
